# genai-aura-getting-started

./: .env.example  README.md  app.py  demo.ipynb  pyproject.toml
